--- a/assets/sass/config/_variables.scss
+++ b/assets/sass/config/_variables.scss
@@ -56,6 +56,7 @@ $c-jewel: #178239;
 $c-mango-tango: #e67700;
 $c-thunderbird: #c7221f;
 $c-solitude: #e8f0fe;
+$c-heather: #bdc1c6;
 
 // PageSpeed Insights colors
 $c-pagespeed-fast: $c-green-700;
@@ -113,6 +114,7 @@ $c-progress-bg: $c-solitude;
 
 $c-user-input-options: $c-cape-cod;
 $c-user-input-note: $c-device-icon-gray;
+$c-user-input-placeholder: $c-heather;
 
 // Google MDC Theme Overrides
 $mdc-theme-primary: $c-brand;
